--- a/SBA.css
+++ b/SBA.css
@@ -1,77 +1,84 @@
 /*Nav bar hamburger Home Page*/
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.nav-menu {
+  display: flex;
+  list-style: none;
+}
+
+.nav-link {
+  margin-left: 1rem;
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  background-color: #333;
+}
+
+@media (max-width: 768px) {
   .nav-menu {
-    display: flex;
-    list-style: none;
-  }
-  .nav-link {
-    margin-left: 1rem;
-  }
-  .hamburger {
     display: none;
-    cursor: pointer;
   }
-  .bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    background-color: #333;
-  }
-  @media (max-width: 768px) {
-    .nav-menu {
-      display: none;
-    }
-    .hamburger {
-      display: block;
-    }
-  }
-  /*Containerization*/  
-  /*Drop it Loooow*/
-  .dropdown {
-    
-    display:flex;
-    justify-content: center;
-  }
-  
-  .dropbtn {
-    background-color: #F4D7E4;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .dropdown-content {
-    display: flex;
-    position: fixed;
-    background-color: #F4D7E4;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+
+  .hamburger {
     display: block;
   }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  .dropdown:hover .dropbtn {
-    background-color: #F4D7E4;
-  }
+}
+
+/*Containerization*/
+/*Drop it Loooow*/
+.dropdown {
+
+  display: flex;
+  justify-content: center;
+}
+
+.dropbtn {
+  background-color: #F4D7E4;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: flex;
+  position: fixed;
+  background-color: #F4D7E4;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #F4D7E4;
+}
